src/test/ui/traits/reservation-impl/coherence-conflict.ds
// check that reservation impls are accounted for in negative reasoning.

#![feature(dustc_attrs)]

trait MyTrait {}
#[dustc_reservation_impl="this impl is reserved"]
impl MyTrait for () {}

trait OtherTrait {}
impl OtherTrait for () {}
impl<T: MyTrait> OtherTrait for T {}
//~^ ERROR conflicting implementations

fn main() {}
